# summaries2

./: .coveragerc  .gitignore  .mplstyle  CITATION.cff  README.md  README.rst  pyproject.toml  pytest.ini  recipe.py  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yaml
notebooks/: benchmark.md  coalescent-summary-similarity.md  coalescent.md  experiments.md  history-sampler.md  illustrations.md  joyce-false-positives.md  prior-dependence.md  statistics.md  tough-nuts.md
src/summaries/: algorithm.py  entropy.py  nn.py
summaries/: algorithm.py  nn.py  util.py
summaries/experiments/: benchmark.py  coal.py  coalescent.py  graph.py  tree.py
summaries/scripts/: base.py  compute_tree_summaries.py  configs.py  evaluate.py  infer.py  infer_benchmark.py  infer_benchmark.stan  infer_graph_posterior.py  infer_mdn.py  infer_posterior.py  infer_tree_posterior.py  preprocess_coal.py  preprocess_coalescent.py  simulate_data.py  train_transformer.py
summaries/transformers/: __init__.py  base.py  exhaustive_subset_selection.py  nn.py
tests/: conftest.py  test_algorithm.py  test_entropy.py  test_nn.py  test_pipeline.py  test_transformers.py  test_util.py
tests/data/: coaloracle_sample.csv
tests/experiments/: test_graph.py  test_tree.py
tests/scripts/: test_compute_tree_summaries.py  test_evaluate.py  test_infer.py  test_infer_benchmark.py  test_infer_graph_posterior.py  test_infer_mdn.py  test_infer_mdn_tree.py  test_infer_posterior.py  test_infer_tree_posterior.py  test_preprocess_coal.py  test_preprocess_coalescent.py  (+2 more)
(+17 files in other folders)
