[project]
name = "summaries"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "torch-scatter>=2.1.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]

[tool.uv.sources]
snippets = { git = "https://github.com/tillahoffmann/snippets.git", rev = "045d0ce" }
fasttr = { git = "https://github.com/gstonge/fasttr.git", rev = "787d0d273ecc21843889a5b4ce3c763110595f28" }
networkit = { git = "https://github.com/networkit/networkit.git" }

[dependency-groups]
dev = [
    "cmdstanpy>=1.2.5",
    "cook-build>=0.6",
    "fasttr",
    "jupyter>=1.1.1",
    "jupytext>=1.17.3",
    "matplotlib>=3.10.7",
    "networkit",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "shapely>=2.1.2",
    "snippets",
    "tqdm>=4.67.1",
]
